src/objects/ResourceSchedule__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Resource Schedule</relationshipLabel>
        <relationshipName>Resource_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>Time Frame (hours)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Resource Schedule</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>